example/manifest/velocity-ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: velocity-ingress
  namespace: game
spec:
  entryPoints:
    - minecraft  # Should have matching traefik values.yaml configuration
  routes:
    - match: HostSNI(`*`)
      services:
        - name: velocity-service
          port: 25565
